--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,19 @@
 version: '3'
 services:
   web:
-    environment:
-       - CHOKIDAR_USEPOLLING=true
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports: 
-      - "3000:3000"
-    volumes:
-      - /home/node/app/node_modules
-      - .:/home/node/app
-  tests:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    volumes:
-      - /home/node/app/node_modules
-      - .:/home/node/app
-    command: ["npm", "test"]
+      - "80:80"
+  #   volumes:
+  #     - /home/node/app/node_modules
+  #     - .:/home/node/app
+  # tests:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.dev
+  #   volumes:
+  #     - /home/node/app/node_modules
+  #     - .:/home/node/app
+  #   command: ["npm", "test"]
